Fixes top spacing for image on single blog page. No longer has a gap between image and header.

--- a/src/sass/partials/_blog_preload.scss
+++ b/src/sass/partials/_blog_preload.scss
@@ -20,7 +20,7 @@
   			padding-top:0;
   		}
 			@media screen and (max-width:em(560)) {
-				margin-top:rem(115);
+				margin-top:rem(111);
 			}
   		.blog-entry	{ background-image:none;}
   }
